# music_web

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: design-aggregate-search.md
knowledge/: README.md
scripts/: deploy.py  migrate_to_library.py
src/: .gitignore  AGENTS.md  MIGRATION.md  README.md  REPORT.md  main.py  pyproject.toml
src/music_cli/: cli.py  config.py  library.py  local.py  models.py  settings.py  sync.py
src/music_cli/sources/: __init__.py  bilibili.py  netease.py  youtube.py
src/music_cli/web/: __init__.py  aggregate.py  api.py  rooms.py  (+1 more)
src/scripts/: export_liked.py
tutorial/: README.md
tutorial/00_overview/: 01_intro.md  02_directory_structure.md  03_data_flow_search_to_play.md  04_share_end_to_end.md
tutorial/01_backend/: 01_cli_and_entry.md  02_config_and_settings.md  03_models.md  04_library.md  05_cache_and_local.md  06_fastapi_overview.md  07_preview_and_stream.md  08_downloads.md  09_rooms.md
tutorial/02_sources/: 01_source_architecture.md  02_native_sources.md  03_web_adapter.md  04_liumingye_in_depth.md  05_direct_stream_web_sources.md  06_aggregate_search.md
tutorial/03_frontend/: 01_overview.md  02_entry_init.md  03_state_config_utils.md  04_components_views.md  05_player_core.md  06_playlists_selection.md  07_room_together.md  08_security_password.md
tutorial/04_features/: 01_share_cards.md  02_preview_stream_download.md  03_rooms_feature.md  04_playcounts_and_history.md  05_deployment_architecture.md
tutorial/05_guides/: 01_add_new_web_source.md  02_debug_common_issues.md  03_customize_and_extend.md
(+61 files in other folders)
