[project]
name = "music"
version = "0.1.0"
description = "多音源音乐搜索、试听与下载 CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.136.3",
    "lxml>=6.1.1",
    "platformdirs>=4.10.0",
    "pycryptodome>=3.23.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "spotipy>=2.26.0",
    "typer>=0.26.7",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
    "yt-dlp>=2026.6.9",
]

[project.scripts]
music = "music_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_cli"]

[dependency-groups]
dev = []
